features added to ensure cards wrap right hand panel to the top right side

--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,11 @@ body{
 
 /* cards separating each of the panels */
 .mainpanels{
+  height: 300px;
+  width: 1050px;
+
   margin: 20px;
   border: 3px solid black;
-  padding: 2px;
 
   text-align: right;
   background-color: white;
@@ -52,12 +54,17 @@ body{
 
 /* right hand panel right side positioning */
 .righthandpanel{
-  margin-left: 20px;
+  height: 300px;
+  width: 300px;
+
+  margin-top: 20px;
+  margin-left: 5px;
   margin-right: 20px;
+  margin-bottom: 20px;
   border: 3px solid black;
   padding-left: 2px;
 
-  text-align: left;
+  text-align: justify;
   background-color: white;
   color: black;
 }
@@ -75,17 +82,15 @@ li{
   text-align: left;
 }
 
-/* cards wrapping around - flexbox options */
+/* cards wrapping around */
 .wrap{
-height: 770px;
+  height: 800px;
 
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-
-/* cards wrapping around - proportions */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 .wrap>*{
-flex: 1 1 80px;
+  flex: 1 1 80px;
 }
 
